fix but where button colors come out blue on mobile

--- a/src/Components/Art-page/modal.scss
+++ b/src/Components/Art-page/modal.scss
@@ -35,5 +35,9 @@
 @media only screen and (max-width: 800px) {
   .modal {
     flex-direction: column;
+
+    button {
+      color: black;
+    }
   }
 }
